Update to official TS support and newest Tailwind

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,3 @@
 {
-  "recommendations": [
-    "dbaeumer.vscode-eslint",
-    "jamesbirtles.svelte-vscode"
-  ]
+  "recommendations": ["svelte.svelte-vscode", "bradlc.vscode-tailwindcss"]
 }
