--- a/package.json
+++ b/package.json
@@ -1,42 +1,31 @@
 {
-  "private": true,
-  "name": "svelte-ts-tailwind-template",
+  "name": "svelte-ts-tailwind-app",
   "version": "1.0.0",
-  "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^1.2.0",
-    "@typescript-eslint/eslint-plugin": "^1.10.2",
-    "@typescript-eslint/parser": "^1.10.2",
-    "autoprefixer": "^9.6.1",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^5.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-svelte3": "^1.2.3",
-    "eslint-plugin-vue": "^5.2.2",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^7.0.17",
-    "postcss-import": "^12.0.1",
-    "prettier": "^1.18.2",
-    "prettier-plugin-svelte": "^0.7.0",
-    "rollup": "^1.18.0",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-node-resolve": "^5.1.0",
-    "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-svelte": "^5.1.0",
-    "rollup-plugin-terser": "^4.0.4",
-    "rollup-plugin-typescript2": "^0.22.1",
-    "sirv-cli": "^0.4.4",
-    "svelte": "^3.6.10",
-    "svelte-ts-preprocess": "^1.1.3",
-    "tailwindcss": "^1.0.6",
-    "typescript": "^3.5.3",
-    "vue-eslint-parser": "^6.0.4"
-  },
   "scripts": {
     "build": "rollup -c",
-    "autobuild": "rollup -c -w",
-    "dev": "run-p start:dev autobuild",
+    "dev": "rollup -c -w",
     "start": "sirv public",
-    "start:dev": "sirv public --dev"
+    "validate": "svelte-check"
   },
-  "dependencies": {}
+  "devDependencies": {
+    "postcss": "^7.0.32",
+    "postcss-load-config": "^2.1.0",
+    "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.0",
+    "rollup": "^2.23.0",
+    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-terser": "^5.1.2",
+    "svelte": "^3.0.0",
+    "svelte-check": "^0.1.0",
+    "svelte-preprocess": "^4.0.0",
+    "@rollup/plugin-typescript": "^4.0.0",
+    "tailwindcss": "1.6.0",
+    "typescript": "^3.9.3",
+    "tslib": "^2.0.0",
+    "@tsconfig/svelte": "^1.0.0"
+  },
+  "dependencies": {
+    "sirv-cli": "^1.0.0"
+  }
 }
