--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "svelte-check": "^1.0.0",
     "svelte-preprocess": "^4.2.1",
     "@rollup/plugin-typescript": "^5.0.2",
-    "tailwindcss": "1.8.4",
+    "tailwindcss": "^1.9.1",
     "typescript": "^4.0.2",
     "tslib": "^2.0.1",
     "@tsconfig/svelte": "^1.0.10"
