--- a/package.json
+++ b/package.json
@@ -8,24 +8,26 @@
     "validate": "svelte-check"
   },
   "devDependencies": {
-    "postcss": "^7.0.32",
-    "postcss-load-config": "^2.1.0",
-    "@rollup/plugin-commonjs": "^15.0.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "rollup": "^2.26.10",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/plugin-typescript": "^8.0.0",
+    "@tsconfig/svelte": "^1.0.10",
+    "autoprefixer": "^10.0.4",
+    "postcss": "^8.1.10",
+    "postcss-load-config": "^3.0.0",
+    "rollup": "^2.34.0",
     "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^6.0.0",
+    "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.0.0",
-    "svelte-check": "^1.0.0",
-    "svelte-preprocess": "^4.2.1",
-    "@rollup/plugin-typescript": "^5.0.2",
-    "tailwindcss": "^1.9.1",
-    "typescript": "^4.0.2",
-    "tslib": "^2.0.1",
-    "@tsconfig/svelte": "^1.0.10"
+    "svelte": "^3.30.1",
+    "svelte-check": "^1.1.17",
+    "svelte-preprocess": "^4.6.1",
+    "tailwindcss": "^2.0.1",
+    "tslib": "^2.0.3",
+    "typescript": "^4.1.2"
   },
   "dependencies": {
+    "rollup-plugin-css-only": "^3.0.0",
     "sirv-cli": "^1.0.0"
   }
 }
