--- a/package.json
+++ b/package.json
@@ -8,26 +8,27 @@
     "validate": "svelte-check"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "@rollup/plugin-typescript": "^8.0.0",
+    "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "@rollup/plugin-typescript": "^8.2.0",
+    "@tailwindcss/jit": "^0.1.10",
     "@tsconfig/svelte": "^1.0.10",
-    "autoprefixer": "^10.0.4",
-    "postcss": "^8.1.10",
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.8",
     "postcss-load-config": "^3.0.0",
-    "rollup": "^2.34.0",
+    "rollup": "^2.42.4",
     "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.30.1",
-    "svelte-check": "^1.1.17",
-    "svelte-preprocess": "^4.6.1",
-    "tailwindcss": "^2.0.1",
-    "tslib": "^2.0.3",
-    "typescript": "^4.1.2"
+    "svelte": "^3.35.0",
+    "svelte-check": "^1.3.0",
+    "svelte-preprocess": "^4.7.0",
+    "tailwindcss": "^2.0.4",
+    "tslib": "^2.1.0",
+    "typescript": "^4.2.3"
   },
   "dependencies": {
-    "rollup-plugin-css-only": "^3.0.0",
+    "rollup-plugin-css-only": "^3.1.0",
     "sirv-cli": "^1.0.0"
   }
 }
