--- a/package.json
+++ b/package.json
@@ -11,24 +11,23 @@
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-typescript": "^8.2.0",
-    "@tailwindcss/jit": "^0.1.10",
     "@tsconfig/svelte": "^1.0.10",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.8",
     "postcss-load-config": "^3.0.0",
-    "rollup": "^2.42.4",
+    "rollup": "^2.44.0",
+    "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.35.0",
+    "svelte": "^3.37.0",
     "svelte-check": "^1.3.0",
     "svelte-preprocess": "^4.7.0",
-    "tailwindcss": "^2.0.4",
-    "tslib": "^2.1.0",
+    "tailwindcss": "2.1.0",
+    "tslib": "^2.2.0",
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "rollup-plugin-css-only": "^3.1.0",
     "sirv-cli": "^1.0.0"
   }
 }
