--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
   "name": "svelte-ts-tailwind-app",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "dev": "TAILWIND_MODE=watch rollup -c -w",
     "start": "sirv public",
-    "validate": "svelte-check"
+    "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^18.0.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-typescript": "^8.2.1",
-    "@tsconfig/svelte": "^1.0.10",
-    "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.13",
-    "postcss-load-config": "^3.0.1",
-    "rollup": "^2.46.0",
+    "@tsconfig/svelte": "^2.0.1",
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.5",
+    "postcss-load-config": "^3.1.0",
+    "rollup": "^2.52.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.37.0",
-    "svelte-check": "^1.5.2",
-    "svelte-preprocess": "^4.7.2",
-    "tailwindcss": "2.1.2",
-    "tslib": "^2.2.0",
-    "typescript": "^4.2.4"
+    "svelte": "^3.38.0",
+    "svelte-check": "^2.2.0",
+    "svelte-preprocess": "^4.7.3",
+    "tailwindcss": "2.2.2",
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.4"
   },
   "dependencies": {
     "sirv-cli": "^1.0.11"
