--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "rollup -c",
-    "dev": "TAILWIND_MODE=watch rollup -c -w",
+    "dev": "rollup -c -w",
     "start": "sirv public",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
@@ -24,7 +24,7 @@
     "svelte": "^3.38.0",
     "svelte-check": "^2.2.0",
     "svelte-preprocess": "^4.7.3",
-    "tailwindcss": "2.2.2",
+    "tailwindcss": "2.2.4",
     "tslib": "^2.3.0",
     "typescript": "^4.3.4"
   },
