--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "svelte": "^3.38.0",
     "svelte-check": "^2.2.0",
     "svelte-preprocess": "^4.7.3",
-    "tailwindcss": "2.2.4",
+    "tailwindcss": "2.2.8",
     "tslib": "^2.3.0",
-    "typescript": "^4.3.4"
+    "typescript": "4.3.5"
   },
   "dependencies": {
     "sirv-cli": "^1.0.11"
