--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^21.0.0",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-typescript": "^8.3.0",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.4.0",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@tsconfig/svelte": "^3.0.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.4",
-    "postcss-load-config": "^3.1.0",
-    "rollup": "^2.67.1",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "postcss-load-config": "^4.0.1",
+    "rollup": "^3.10.1",
+    "rollup-plugin-css-only": "^4.3.0",
+    "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-svelte": "^7.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.46.4",
-    "svelte-check": "^2.4.3",
-    "svelte-preprocess": "^4.9.4",
-    "tailwindcss": "~3.0.0",
-    "tslib": "^2.3.1",
-    "typescript": "~4.5.5"
+    "svelte": "^3.55.1",
+    "svelte-check": "^3.0.2",
+    "svelte-preprocess": "^5.0.1",
+    "tailwindcss": "~3.2.4",
+    "tslib": "^2.4.1",
+    "typescript": "~4.9.4"
   },
   "dependencies": {
     "sirv-cli": "^2.0.2"
