--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^24.0.1",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-terser": "^0.4.0",
-    "@rollup/plugin-typescript": "^11.0.0",
-    "@tsconfig/svelte": "^3.0.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
+    "@rollup/plugin-commonjs": "^25.0.1",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-typescript": "^11.1.1",
+    "@tsconfig/svelte": "^4.0.1",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
-    "rollup": "^3.10.1",
+    "rollup": "^3.25.1",
     "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-svelte": "^7.1.0",
-    "svelte": "^3.55.1",
-    "svelte-check": "^3.0.2",
-    "svelte-preprocess": "^5.0.1",
-    "tailwindcss": "~3.2.4",
-    "tslib": "^2.4.1",
-    "typescript": "~4.9.4"
+    "rollup-plugin-svelte": "^7.1.5",
+    "svelte": "^4.0.0-next.1",
+    "svelte-check": "^3.4.3",
+    "svelte-preprocess": "^5.0.4",
+    "tailwindcss": "^3.3.2",
+    "tslib": "^2.5.3",
+    "typescript": "~5.1.3"
   },
   "dependencies": {
     "sirv-cli": "^2.0.2"
