--- a/package.json
+++ b/package.json
@@ -2,33 +2,25 @@
   "name": "svelte-ts-tailwind-app",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^25.0.1",
-    "@rollup/plugin-node-resolve": "^15.1.0",
-    "@rollup/plugin-terser": "^0.4.3",
-    "@rollup/plugin-typescript": "^11.1.1",
+    "@sveltejs/vite-plugin-svelte": "^2.4.1",
     "@tsconfig/svelte": "^4.0.1",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "postcss-load-config": "^4.0.1",
-    "rollup": "^3.25.1",
-    "rollup-plugin-css-only": "^4.3.0",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-svelte": "^7.1.5",
     "svelte": "^4.0.0-next.1",
     "svelte-check": "^3.4.3",
-    "svelte-preprocess": "^5.0.4",
-    "tailwindcss": "^3.3.2",
+    "svelte-preprocess": "^5.0.3",
     "tslib": "^2.5.3",
-    "typescript": "~5.1.3"
-  },
-  "dependencies": {
-    "sirv-cli": "^2.0.2"
+    "typescript": "^5.1.3",
+    "vite": "^4.3.9",
+    "postcss": "^8.4.23",
+    "postcss-load-config": "^4.0.1",
+    "autoprefixer": "^10.4.14",
+    "tailwindcss": "^3.3.2"
   }
 }
