--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.4.1",
-    "@tsconfig/svelte": "^4.0.1",
-    "svelte": "^4.0.0-next.1",
-    "svelte-check": "^3.4.3",
-    "svelte-preprocess": "^5.0.3",
-    "tslib": "^2.5.3",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9",
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
+    "@tsconfig/svelte": "^5.0.2",
+    "svelte": "^4.2.7",
+    "svelte-check": "^3.6.1",
+    "svelte-preprocess": "^5.1.1",
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.2",
+    "vite": "^5.0.2",
     "postcss": "^8.4.23",
     "postcss-load-config": "^4.0.1",
     "autoprefixer": "^10.4.14",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.5"
   }
 }
