--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tsconfig/svelte": "^5.0.2",
-    "svelte": "^4.2.7",
+    "svelte": "^5.0.0-next.11",
     "svelte-check": "^3.6.1",
     "svelte-preprocess": "^5.1.1",
     "tslib": "^2.6.2",
