--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^3.0.1",
+    "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@tsconfig/svelte": "^5.0.2",
-    "svelte": "^5.0.0-next.11",
-    "svelte-check": "^3.6.1",
-    "svelte-preprocess": "^5.1.1",
+    "autoprefixer": "^10.4.17",
+    "postcss-load-config": "^5.0.2",
+    "postcss": "^8.4.33",
+    "svelte-check": "^3.6.3",
+    "svelte-preprocess": "^5.1.3",
+    "svelte": "^5.0.0-next.40",
+    "tailwindcss": "^3.4.1",
     "tslib": "^2.6.2",
-    "typescript": "^5.3.2",
-    "vite": "^5.0.2",
-    "postcss": "^8.4.23",
-    "postcss-load-config": "^4.0.1",
-    "autoprefixer": "^10.4.14",
-    "tailwindcss": "^3.3.5"
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12"
   }
 }
