--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^3.0.2",
-    "@tsconfig/svelte": "^5.0.2",
-    "autoprefixer": "^10.4.17",
-    "postcss-load-config": "^5.0.2",
-    "postcss": "^8.4.33",
-    "svelte-check": "^3.6.3",
-    "svelte-preprocess": "^5.1.3",
-    "svelte": "^5.0.0-next.40",
-    "tailwindcss": "^3.4.1",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.12"
+    "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+    "@tsconfig/svelte": "^5.0.4",
+    "autoprefixer": "^10.4.20",
+    "postcss-load-config": "^6.0.1",
+    "postcss": "^8.4.47",
+    "svelte-check": "^4.0.2",
+    "svelte-preprocess": "^6.0.2",
+    "svelte": "^5.0.0-next.257",
+    "tailwindcss": "^3.4.12",
+    "tslib": "^2.7.0",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.7"
+  },
+  "overrides": {
+    "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6"
   }
 }
