--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@tsconfig/svelte": "^5.0.4",
     "autoprefixer": "^10.4.20",
     "postcss-load-config": "^6.0.1",
     "postcss": "^8.4.47",
     "svelte-check": "^4.0.2",
     "svelte-preprocess": "^6.0.2",
-    "svelte": "^5.0.0-next.257",
+    "svelte": "^5.0.3",
     "tailwindcss": "^3.4.12",
     "tslib": "^2.7.0",
     "typescript": "^5.6.2",
     "vite": "^5.4.7"
   },
   "overrides": {
-    "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6"
+    "@sveltejs/vite-plugin-svelte": "^4.0.0"
   }
 }
